Suppress a warning on GitHub platform about highlighter

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # This is the default format. 
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink: /:categories/:year/:month/:day/:title
-highlighter: true
+pygments: true
 markdown: rdiscount
 var:
   archive_path: /archive.html
