--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Livid
+author: Livid
+email: livid@v2ex.com
 description: > # this means to ignore newlines until "twitter_username:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Beautifully Advance
 
 # social links
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: livid
+github_username:  livid
 rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
