--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ author: Livid
 email: livid@v2ex.com
 description: > # this means to ignore newlines until "twitter_username:"
   Beautifully Advance
+url: https://livid.v2ex.com
 
 # social links
 twitter_username: livid
