Update config based on the latest installation method https://sboots.ca/2021/07/20/installing-jekyll-locally-on-macos-big-sur/

--- a/_config.yml
+++ b/_config.yml
@@ -46,3 +46,12 @@ theme: minima
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
+
+exclude:
+ - .ruby-gemset
+ - .ruby-version
+ - Gemfile
+ - Gemfile.lock
+ - Makefile
+ - README.md
+ - vendor/
