--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,8 @@ theme: minima
 plugins:
  - jekyll-feed
  - jekyll-seo-tag
+ - jekyll-json-feed
+ - jekyll-relative-links
 
 exclude:
  - .ruby-gemset
